--- a/volumes/local-path-storage.yaml
+++ b/volumes/local-path-storage.yaml
@@ -113,15 +113,6 @@ spec:
             name: local-path-config
 
 ---
-apiVersion: storage.k8s.io/v1
-kind: StorageClass
-metadata:
-  name: local-path
-provisioner: rancher.io/local-path
-volumeBindingMode: WaitForFirstConsumer
-reclaimPolicy: Delete
-
----
 kind: ConfigMap
 apiVersion: v1
 metadata:
@@ -171,3 +162,12 @@ metadata:
 provisioner: rancher.io/local-path  # またはk8s.io/minikube-hostpath (minikubeの場合)
 volumeBindingMode: WaitForFirstConsumer
 reclaimPolicy: Delete
+
+---
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: retaind-storage
+provisioner: rancher.io/local-path  # またはk8s.io/minikube-hostpath (minikubeの場合)
+volumeBindingMode: WaitForFirstConsumer
+reclaimPolicy: Retain
