--- a/volumes/local-path-storage.yaml
+++ b/volumes/local-path-storage.yaml
@@ -167,7 +167,7 @@ reclaimPolicy: Delete
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: retaind-storage
+  name: retained-storage
 provisioner: rancher.io/local-path  # またはk8s.io/minikube-hostpath (minikubeの場合)
 volumeBindingMode: WaitForFirstConsumer
 reclaimPolicy: Retain
