--- a/dashboard/skip-login-ingress.yaml
+++ b/dashboard/skip-login-ingress.yaml
@@ -6,6 +6,7 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
     # ログイン画面スキップ用：トークンを自動注入
+    # kubectl create token dashboard-admin -n kubernetes-dashboard --duration=87600h
     nginx.ingress.kubernetes.io/configuration-snippet: |
       proxy_set_header Authorization "Bearer <token_here>";
 spec:
