--- a/docker_registry/registry.yml
+++ b/docker_registry/registry.yml
@@ -73,3 +73,46 @@ spec:
   - port: 5000
     targetPort: 5000
     protocol: TCP
+
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: registry-ui
+  namespace: docker-registry
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: registry-ui
+  template:
+    metadata:
+      labels:
+        app: registry-ui
+    spec:
+      containers:
+        - name: registry-ui
+          image: joxit/docker-registry-ui:latest
+          ports:
+            - containerPort: 80
+          env:
+            - name: REGISTRY_TITLE
+              value: "Private Docker Registry"
+            - name: NGINX_PROXY_PASS_URL
+              value: "http://docker-registry-service:5000"
+            - name: SINGLE_REGISTRY
+              value: "true"
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: registry-ui-service
+  namespace: docker-registry
+spec:
+  type: ClusterIP
+  selector:
+    app: registry-ui
+  ports:
+    - port: 80
+      targetPort: 80
