myfinanceデプロイ関連を整備

--- a/web/ingress.yaml
+++ b/web/ingress.yaml
@@ -24,7 +24,7 @@ spec:
   - host: api.your-domain.com  # TODO: 実際のドメインに変更
     http:
       paths:
-      - path: /
+      - path: /api
         pathType: Prefix
         backend:
           service:
