--- a/portal/portal-ingress.yaml
+++ b/portal/portal-ingress.yaml
@@ -72,6 +72,7 @@ data:
                 <li><a href="/k8s/">Kubernetes Dashboard</a></li>
                 <li><a href="/postgres/">PgAdmin</a></li>
                 <li><a href="/docker/">docker</a></li>
+                <li><a href="/myfinance/">myfinance</a></li>
             </ul>
         </div>
     </body>
@@ -209,3 +210,48 @@ spec:
                 name: registry-ui-service
                 port:
                   number: 80
+
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: myfinance-frontend-ingress
+  namespace: default
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      proxy_set_header X-Script-Name /myfinance;
+spec:
+  ingressClassName: nginx
+  rules:
+    - http:
+        paths:
+          - path: /myfinance(/|$)(.*)
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: frontend-service
+                port:
+                  number: 3000
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: myfinance-backend-ingress
+  namespace: default
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      proxy_set_header X-Script-Name /myfinance/api;
+spec:
+  ingressClassName: nginx
+  rules:
+    - http:
+        paths:
+          - path: /myfinance/api(/|$)(.*)
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: backend-service
+                port:
+                  number: 3000
