--- a/web/frontend-deployment.yaml
+++ b/web/frontend-deployment.yaml
@@ -17,49 +17,20 @@ spec:
       containers:
       - name: frontend
         image: 192.168.151.193:5000/frontend:latest  # TODO: 実際のイメージに変更
-        ports:
-        - containerPort: 3000
-        env:
-        - name: NODE_ENV
-          value: "production"
-        # Next.jsからバックエンドAPIへの接続URL
-        # サーバーサイドレンダリング時はクラスタ内部のService名を使用
-        - name: NEXT_PUBLIC_API_URL
-          value: "http://backend-service:3000"
-        # クライアントサイドからのAPI呼び出し用（Ingressなどを経由する場合）
-        # - name: NEXT_PUBLIC_API_URL
-        #   value: "https://api.your-domain.com"
-        resources:
-          requests:
-            memory: "128Mi"
-            cpu: "100m"
-          limits:
-            memory: "512Mi"
-            cpu: "500m"
-        readinessProbe:
-          httpGet:
-            path: /
-            port: 3000
-          initialDelaySeconds: 5
-          periodSeconds: 10
-        livenessProbe:
-          httpGet:
-            path: /
-            port: 3000
-          initialDelaySeconds: 15
-          periodSeconds: 20
+        command: ["/bin/sh", "-c", "sleep infinity"]
+        envFrom:
+        - secretRef:
+            name: myfinance-secret
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontend-service
-  labels:
-    app: frontend
+  name: backend-service
 spec:
-  type: LoadBalancer  # 外部からアクセスする場合。NodePortやIngressも選択可能
+  type: ClusterIP
   selector:
     app: frontend
   ports:
-  - port: 80
+  - port: 3000
     targetPort: 3000
     protocol: TCP
