--- a/web/my_finance.yml
+++ b/web/my_finance.yml
@@ -10,6 +10,7 @@ stringData:
   JQUANTS_MAIL: $JQUANTS_MAIL
   JQUANTS_PASS: $JQUANTS_PASS
   BACKEND_ENDPOINT: $BACKEND_ENDPOINT
+  BASE_PATH: $BASE_PATH
 
 ---
 apiVersion: apps/v1
