--- a/portal/portal-ingress.yaml
+++ b/portal/portal-ingress.yaml
@@ -215,43 +215,28 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: myfinance-frontend-ingress
+  name: myfinance-ingress
   namespace: default
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
-    nginx.ingress.kubernetes.io/configuration-snippet: |
-      proxy_set_header X-Script-Name /myfinance;
+    # nginx.ingress.kubernetes.io/rewrite-target: /$2
+    # nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
   ingressClassName: nginx
   rules:
     - http:
         paths:
-          - path: /myfinance(/|$)(.*)
-            pathType: ImplementationSpecific
-            backend:
-              service:
-                name: frontend-service
-                port:
-                  number: 3000
----
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: myfinance-backend-ingress
-  namespace: default
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
-    nginx.ingress.kubernetes.io/configuration-snippet: |
-      proxy_set_header X-Script-Name /myfinance/api;
-spec:
-  ingressClassName: nginx
-  rules:
-    - http:
-        paths:
-          - path: /myfinance/api(/|$)(.*)
-            pathType: ImplementationSpecific
+          - path: /myfinance/api
+            pathType: Prefix
             backend:
               service:
                 name: backend-service
+                port:
+                  number: 3000
+
+          - path: /myfinance
+            pathType: Prefix
+            backend:
+              service:
+                name: frontend-service
                 port:
                   number: 3000
